# ifr-1_plugin

./: .dockerignore  .gitignore  .output.txt  CMakeLists.txt  DOCKER_BUILD.md  Dockerfile  LICENSE  NOTICE  README.md  docker-build.sh  install.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
.junie/: guidelines.md
configs/: ask21.json  beechcraft.json  general-aviation-g1000-sorcerer.json  general-aviation-g1000.json  general-aviation-g430-530.json  generic.json  md-80.json  piper-cub.json
documentation/: aircraft_configs.md
src/: plugin_main.cpp
src/core/: ConditionEvaluator.cpp  ConditionEvaluator.h  ConfigManager.cpp  ConfigManager.h  DataRefUtils.h  DeviceHandler.cpp  DeviceHandler.h  EventProcessor.cpp  EventProcessor.h  HIDManager.cpp  HIDManager.h  IFR1Protocol.h  IHardwareManager.h  Logger.h  ModeDisplay.cpp  ModeDisplay.h  OutputProcessor.cpp  OutputProcessor.h  ParsedCondition.h  SettingsManager.cpp  SettingsManager.h  ThreadSafeQueue.h  XPlaneSDK.h  XPlaneSDK_Actual.cpp
src/ui/: AboutWindow.cpp  AboutWindow.h  GLTextureHandle.h  QuickReferenceWindow.cpp  QuickReferenceWindow.h  ScrollbarHelper.h  SettingsWindow.cpp  SettingsWindow.h
tests/: ConditionalAction_test.cpp  ConfigManager_test.cpp  ConfigValidation_test.cpp  DeviceHandler_test.cpp  EventProcessor_test.cpp  Failing_test.cpp  ModeDisplay_test.cpp  OutputProcessor_test.cpp  SettingsManager_test.cpp  ThreadSafeQueue_test.cpp
tools/: embed_png.py  embed_text.py
